# PZ2-2025-26

./: .env.example  README.md  compose.dev.yaml  compose.yaml  new_feature.md
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.db.yaml  compose.dev.yaml  compose.yaml  dev.db  example.env  flake.nix  pyproject.toml
backend/docs/: db_schema.mmd
backend/scripts/: db-intgr-tests.sh  fmt-check.sh  fmt.sh  integration-tests.sh  lib.sh  lint.sh  pipeline.sh  unit-tests.sh
backend/src/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  seed.py  utils.py
backend/src/admin/: router.py  schemas.py  service.py
backend/src/auth/: constants.py  dependencies.py  errors.py  google_oauth.py  jwt.py  models.py  router.py  schemas.py  service.py
backend/src/borrowing/: models.py  router.py  schemas.py  service.py
backend/src/categories/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/equipment/: models.py  router.py  schemas.py  service.py
backend/src/exports/: router.py  service.py
backend/src/guests/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/import_koidc/: README.md  __init__.py  __main__.py  constants.py  loader.py  parser.py  prompts.py  report.py  service.py  sql_migrate.py
backend/src/items/: acl_service.py  attachment_service.py  constants.py  dependencies.py  exceptions.py  helpers.py  label_service.py  models.py  qr_service.py  router.py  schemas.py  service.py
backend/src/loans/: constants.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/src/location/: models.py  router.py  schemas.py  service.py
backend/src/locations/: bootstrap.py  constants.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/users/: constants.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  helpers.py  test_dummy.py  test_item_router.py  test_item_service.py  test_seed.py
backend/tests/auth/: test_jwt.py  test_observer_readonly_integration.py  test_service.py
backend/tests/categories/: test_category_path.py  test_category_router_integration.py  test_category_schemas.py  test_category_service_integration.py
backend/tests/exports/: test_export_router_integration.py
backend/tests/guests/: test_guest_router_integration.py
backend/tests/items/: test_item_attachment_service.py  test_item_listing.py  (+4 more)
(+116 files in other folders)
