[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
    "pydantic>=2.13.4",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.13",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
