[project]
name = "backend"
version = "0.1.0"
description = "PZ dev 2026"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=48.0.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "pymysql>=1.2.0",
    "sqlalchemy>=2.0.49",
    "authlib>=1.6.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "itsdangerous>=2.2.0",
    "email-validator>=1.3.1",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "httpx>=0.28.0",
    "pytest-mock>=3.14.0",

]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
    "FAST",  # FastAPI
]

[tool.pytest]
markers = [
    "integration: integration tests that require a running database"
]
